// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./packages/engine/demo/basic.md correctly 1`] = `
<span
  class="brick brick__with-config-form"
>
  <div
    class="brick__config-form"
  >
    <button
      class="brick__config-form-btn brick__config-form-btn-edit"
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  hello world
  <div
    class="brick__action-area brick__action-area-left"
  />
  <div
    class="brick__action-area brick__action-area-right"
  />
  <div
    class="brick__action-area brick__action-area-top"
  />
  <div
    class="brick__action-area brick__action-area-bottom"
  />
</span>
`;

exports[`renders ./packages/engine/demo/children.md correctly 1`] = `
<div
  class="brick brick__with-config-form"
>
  <div
    class="brick__config-form"
  >
    <button
      class="brick__config-form-btn brick__config-form-btn-edit"
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <span
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    hello
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </span>
  <span
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    world
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </span>
  <div
    class="brick__action-area brick__action-area-left"
  />
  <div
    class="brick__action-area brick__action-area-right"
  />
  <div
    class="brick__action-area brick__action-area-top"
  />
  <div
    class="brick__action-area brick__action-area-bottom"
  />
</div>
`;

exports[`renders ./packages/engine/demo/config-tree-array.md correctly 1`] = `
Array [
  <span
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    hello
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </span>,
  <span
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    world
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </span>,
  <div
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span
      class="brick brick__with-config-form"
    >
      <div
        class="brick__config-form"
      >
        <button
          class="brick__config-form-btn brick__config-form-btn-edit"
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      hello
      <div
        class="brick__action-area brick__action-area-left"
      />
      <div
        class="brick__action-area brick__action-area-right"
      />
      <div
        class="brick__action-area brick__action-area-top"
      />
      <div
        class="brick__action-area brick__action-area-bottom"
      />
    </span>
    <span
      class="brick brick__with-config-form"
    >
      <div
        class="brick__config-form"
      >
        <button
          class="brick__config-form-btn brick__config-form-btn-edit"
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      world
      <div
        class="brick__action-area brick__action-area-left"
      />
      <div
        class="brick__action-area brick__action-area-right"
      />
      <div
        class="brick__action-area brick__action-area-top"
      />
      <div
        class="brick__action-area brick__action-area-bottom"
      />
    </span>
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </div>,
]
`;

exports[`renders ./packages/engine/demo/custom-render.md correctly 1`] = `
<div
  class="brick brick__with-config-form"
>
  <div
    class="brick__config-form"
  >
    <button
      class="brick__config-form-btn brick__config-form-btn-edit"
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <span>
    foo
  </span>
  <span
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    bar
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </span>
  <div
    class="brick__action-area brick__action-area-left"
  />
  <div
    class="brick__action-area brick__action-area-right"
  />
  <div
    class="brick__action-area brick__action-area-top"
  />
  <div
    class="brick__action-area brick__action-area-bottom"
  />
</div>
`;

exports[`renders ./packages/engine/demo/supply.md correctly 1`] = `
<div
  class="brick brick__with-config-form"
>
  <div
    class="brick__config-form"
  >
    <button
      class="brick__config-form-btn brick__config-form-btn-edit"
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <div
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span
      class="brick brick__with-config-form"
    >
      <div
        class="brick__config-form"
      >
        <button
          class="brick__config-form-btn brick__config-form-btn-edit"
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      foo
      <div
        class="brick__action-area brick__action-area-left"
      />
      <div
        class="brick__action-area brick__action-area-right"
      />
      <div
        class="brick__action-area brick__action-area-top"
      />
      <div
        class="brick__action-area brick__action-area-bottom"
      />
    </span>
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </div>
  <div
    class="brick__action-area brick__action-area-left"
  />
  <div
    class="brick__action-area brick__action-area-right"
  />
  <div
    class="brick__action-area brick__action-area-top"
  />
  <div
    class="brick__action-area brick__action-area-bottom"
  />
</div>
`;

exports[`renders ./packages/engine/demo/supply-from-data.md correctly 1`] = `
<div
  class="brick brick__with-config-form"
>
  <div
    class="brick__config-form"
  >
    <button
      class="brick__config-form-btn brick__config-form-btn-edit"
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <div
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span
      class="brick brick__with-config-form"
    >
      <div
        class="brick__config-form"
      >
        <button
          class="brick__config-form-btn brick__config-form-btn-edit"
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      bar
      <div
        class="brick__action-area brick__action-area-left"
      />
      <div
        class="brick__action-area brick__action-area-right"
      />
      <div
        class="brick__action-area brick__action-area-top"
      />
      <div
        class="brick__action-area brick__action-area-bottom"
      />
    </span>
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </div>
  <div
    class="brick__action-area brick__action-area-left"
  />
  <div
    class="brick__action-area brick__action-area-right"
  />
  <div
    class="brick__action-area brick__action-area-top"
  />
  <div
    class="brick__action-area brick__action-area-bottom"
  />
</div>
`;

exports[`renders ./packages/engine/demo/supply-with-id.md correctly 1`] = `
<div
  class="brick brick__with-config-form"
>
  <div
    class="brick__config-form"
  >
    <button
      class="brick__config-form-btn brick__config-form-btn-edit"
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <div
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span
      class="brick brick__with-config-form"
    >
      <div
        class="brick__config-form"
      >
        <button
          class="brick__config-form-btn brick__config-form-btn-edit"
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      foo
      <div
        class="brick__action-area brick__action-area-left"
      />
      <div
        class="brick__action-area brick__action-area-right"
      />
      <div
        class="brick__action-area brick__action-area-top"
      />
      <div
        class="brick__action-area brick__action-area-bottom"
      />
    </span>
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </div>
  <div
    class="brick__action-area brick__action-area-left"
  />
  <div
    class="brick__action-area brick__action-area-right"
  />
  <div
    class="brick__action-area brick__action-area-top"
  />
  <div
    class="brick__action-area brick__action-area-bottom"
  />
</div>
`;

exports[`renders ./packages/engine/demo/supply-without-id.md correctly 1`] = `
<div
  class="brick brick__with-config-form"
>
  <div
    class="brick__config-form"
  >
    <button
      class="brick__config-form-btn brick__config-form-btn-edit"
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <div
    class="brick brick__with-config-form"
  >
    <div
      class="brick__config-form"
    >
      <button
        class="brick__config-form-btn brick__config-form-btn-edit"
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span
      class="brick brick__with-config-form"
    >
      <div
        class="brick__config-form"
      >
        <button
          class="brick__config-form-btn brick__config-form-btn-edit"
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      baz
      <div
        class="brick__action-area brick__action-area-left"
      />
      <div
        class="brick__action-area brick__action-area-right"
      />
      <div
        class="brick__action-area brick__action-area-top"
      />
      <div
        class="brick__action-area brick__action-area-bottom"
      />
    </span>
    <div
      class="brick__action-area brick__action-area-left"
    />
    <div
      class="brick__action-area brick__action-area-right"
    />
    <div
      class="brick__action-area brick__action-area-top"
    />
    <div
      class="brick__action-area brick__action-area-bottom"
    />
  </div>
  <div
    class="brick__action-area brick__action-area-left"
  />
  <div
    class="brick__action-area brick__action-area-right"
  />
  <div
    class="brick__action-area brick__action-area-top"
  />
  <div
    class="brick__action-area brick__action-area-bottom"
  />
</div>
`;
